CRUD completo de los mockups API, manejo de usuarios, formulario para la creacion de los mocks, endpoints asociados a un proyecto, implementacion del i18n, seguridad de la gestion de los Mock e validacion con JWT